# PsychoBenchPro

./: .env.example  .gitignore  CHANGELOG.md  README.md  example_generator.py  pyproject.toml  questionnaires.json  requirements.txt  run_psychobench.py  utils.py
.github/workflows/: tests.yml
conf/: benchmark.yaml  config.yaml  fast-multirun.yaml
scripts/: BENCHMARK_COST_77_RUNS.md  POWER_ANALYSIS_BFI_CROWD.md  PRICING_REFERENCE.md  QUESTIONNAIRE_TOKEN_COUNTS.md  benchmark_cost_77runs.py  count_questionnaire_tokens.py
tests/: conftest.py  test_ci_dummy.py  test_example_generator.py  test_hydra_config.py  test_utils.py
