[project]
name = "psychobench-pro"
version = "0.1.0"
description = "Benchmarking LLMs' Psychological Portray (PsychoBench)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "requests",
    "openai",
    "tenacity",
    "tqdm",
]
