[project]
name = "psychobench-pro"
version = "0.1.0"
description = "Benchmarking LLMs' Psychological Portray (PsychoBench)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "requests>=2.28.0",
    "openai>=1.0.0",
    "tenacity>=8.0.0",
    "tqdm>=4.64.0",
    "loguru>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
